zeroidc/vendor/thiserror/tests/ui/from-backtrace-backtrace.stderr
error: deriving From requires no fields other than source and backtrace
 --> tests/ui/from-backtrace-backtrace.rs:8:18
  |
8 | pub struct Error(#[from] #[backtrace] std::io::Error, Backtrace);
  |                  ^^^^^^^
